--- a/_layouts/blog-home.html
+++ b/_layouts/blog-home.html
@@ -39,7 +39,7 @@
 					{% for post in site.categories.blog %}
 						<li class='post'>
 							{% if post.image %}
-								<a href='{{post.url}}'><img class='post-image' src="{{post.image}}" /></a>
+								<a href='{{post.url}}'><img class='post-image' src="{{post.image}}" height="42" width="42"/></a>
 							{% endif %}
 							<div class="postcontent">
 					<a href='{{post.url}}'><h1 class='post-title'>{{post.title}}</h1></a>
