--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,7 @@ h1 {
 
 .post-image{
 	width: 250px;
+	height: 250px;
 	box-shadow: 0 0px 0px #cccccc;
 	border-radius: 0px;
     	//margin: 10px 0px 10px 0px;
