--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,3 +5,4 @@
 </div>
 </div>
 <section id="home-hero"></section>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
