--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
 The color combination used here comes from <a href="http://clrs.cc" target="_blank">CLRS</a>.
 </p>
 <p>
-  <ul>
+  <ul id="icons">
     {% if site.github_username %}
       <li>
         <a href="https://github.com/{{ site.github_username }}">
