--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -22,6 +22,8 @@
 			<div id='page'>
 				<h1 id='page-title'>{{page.title}}</h1>
 				{{content}}
+				
+				{{link}}
 
 				{% include comment.html %}
 
