--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -23,7 +23,7 @@
 				<h1 id='page-title'>{{page.title}}</h1>
 				{{content}}
 				
-				<link href="{{link}}"/>
+				<link href="{{page.link}}"/>
 
 				{% include comment.html %}
 
