--- a/_layouts/blog-home2.html
+++ b/_layouts/blog-home2.html
@@ -45,7 +45,7 @@
 			<div style='clear: both'></div>
 		</div>
 		<div id='content' class="hp">
-			// <div id='posts' class="leftblock">
+			<! div id='posts' class="leftblock"> 
 				<ul>
 					{% for post in site.categories.blog %}
 						<li class='post'>
@@ -60,7 +60,7 @@
 						</li>
 					{% endfor %}
 				</ul>
-		//	</div>
+			<!/div>
 			<div style='clear:both'></div>
 		</div>
 		<div id='footer'>
